# stair-climbing-robot

./: CMakeLists.txt  CMakePresets.json  README -site identification.md  README A.md  README SPEEDCONTROL.md  README.md  readme.txt
Site Identification/: test.c
include/: climbing_fsm.h  config.h  encoder.h  front_distance_sensor.h  front_segment.h  item_scanner.h  line_tracker.h  linear_actuator.h  logger.h  mcp23017_downward_sensor.h  mcp23017_driver.h  mcp23017_limit_switch.h  middle_drive_module.h  middle_lift_module.h  motion_coordinator.h  motor_controller.h  motor_driver.h  obstacle_avoidance.h  pose_monitor.h  rear_support_module.h  robot_controller.h  safety_manager.h  share_types.h  speed_controller.h  step_detector.h  types.h  ultrasonic_sensor.h  utils.h
src/: climbing_fsm.cpp  encoder.cpp  front_distance_sensor.cpp  front_segment.cpp  item_scanner.cpp  line_tracker.cpp  linear_actuator.cpp  logger.cpp  main.cpp  mcp23017_downward_sensor.cpp  mcp23017_driver.cpp  mcp23017_limit_switch.cpp  middle_drive_module.cpp  middle_lift_module.cpp  motion_coordinator.cpp  motor_controller.cpp  motor_driver.cpp  obstacle_avoidance.cpp  pose_monitor.cpp  rear_support_module.cpp  robot_controller.cpp  safety_manager.cpp  speed_controller.cpp  step_detector.cpp  ultrasonic_sensor.cpp  utils.cpp
tools/: drv8833_direct_lift_keyboard_test.cpp  drv8833_direct_lift_test.cpp  drv8833_direct_rear_slide_test.cpp  drv8833_direct_test.cpp  drv8833_direct_wheel_test.cpp  drv8833_pca_lift_test.cpp  front_ir_mcp23017_test.cpp  front_ultrasonic_test.cpp  ir_direct_gpio_all_test.cpp  ir_mcp23017_all_test.cpp  mcp23017_limit_switch_test.cpp  rear_slide_limit_orientation_test.cpp  tb6612_pca_direct_test.cpp
